Select hover correct

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="card">
                 <div class="content-card">
                         <p class="label label-default">Сказочное заморское явство</p>
-                        <p class="label label-select">Котэ не одобряет?</p>
+                        <p class="label label-select-hover">Котэ не одобряет?</p>
                         <h3>Нямушка</h3>
                         <h5 class="cardСampaign">с фуа-гра</h5>
                         <p class="cardInfo">10 порций<br> мышь в подарок</p>
@@ -39,11 +39,11 @@
             </p>
         </div>
         <div class="col">
-                <div class="card-wrapper-select">
+                <div class="card-wrapper">
             <div class="card"> 
                     <div class="content-card">
                         <p class="label label-default">Сказочное заморское явство</p>
-                        <p class="label label-select">Котэ не одобряет?</p>
+                        <p class="label label-select-hover">Котэ не одобряет?</p>
                             <h3>Нямушка</h3>
                         <h5 class="cardСampaign">с рыбой</h5>
                         <p class="cardInfo">40 порций <br>2 мыши в подарок</p>
@@ -69,7 +69,7 @@
             <div class="card"> 
                     <div class="content-card">
                         <p class="label label-default">Сказочное заморское явство</p>
-                        <p class="label label-select">Котэ не одобряет?</p>
+                        <p class="label label-select-hover">Котэ не одобряет?</p>
                             <h3>Нямушка</h3>
                         <h5 class="cardСampaign">с курой</h5>
                         <p class="cardInfo">100 порций<br> 5 мышей в подарок<br> заказчик доволен</p>
@@ -80,7 +80,6 @@
                     </div>
             </div>
             </div>
-        
             <p class="additional-information-disable">
                 Печалька, с курой закончился.
             </p>
