--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
              </div>       
             </div>
             <p class="additional-information-default">
-                Чего сидишь? Порадуй котэ, <a class="link"href="#">купи.</a>
+                Чего сидишь? Порадуй котэ, <a class="link">купи.</a>
             </p>
             <p class="additional-information-select">
                 Печень утки разварная с артишоками.
@@ -54,7 +54,7 @@
             </div>
             </div>
             <p class="additional-information-default">
-                Чего сидишь? Порадуй котэ, <a class="link"href="#">купи.</a>
+                Чего сидишь? Порадуй котэ, <a class="link" >купи.</a>
             </p>
             <p class="additional-information-select">
                 Головы щучьи с чесноком да свежайшая сёмгушка.
@@ -83,7 +83,7 @@
                 Печалька, с курой закончился.
             </p>
             <p class="additional-information-default">
-                Чего сидишь? Порадуй котэ, <a class="link"href="#">купи.</a>
+                Чего сидишь? Порадуй котэ, <a class="link">купи.</a>
             </p>
             <p class="additional-information-select">
                 Филе из цыплят с трюфелями в бульоне.
