Add gulp, changed directories.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Funbox test project</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="style/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./build/style/main.css" />
 </head>
 <body>
     <main class="container">
@@ -21,8 +21,8 @@
                         <h5 class="cardСampaign">с фуа-гра</h5>
                         <p class="cardInfo">10 порций<br> мышь в подарок</p>
                         <div class="circle">
-                        <p class='amount'>0,5</p>
-                        <p class="unit">кг</p>
+                            <p class='amount'>0,5</p>
+                            <p class="unit">кг</p>
                     </div>
                 </div> 
              </div>       
@@ -47,8 +47,8 @@
                         <h5 class="cardСampaign">с рыбой</h5>
                         <p class="cardInfo">40 порций <br>2 мыши в подарок</p>
                         <div class="circle">
-                        <p class='amount'>2</p>
-                        <p class="unit">кг</p>
+                            <p class='amount'>2</p>
+                            <p class="unit">кг</p>
                     </div>
                 </div>   
             </div>
@@ -69,13 +69,13 @@
                     <div class="content-card">
                         <p class="label label-default">Сказочное заморское явство</p>
                         <p class="label label-select-hover">Котэ не одобряет?</p>
-                            <h3>Нямушка</h3>
+                        <h3>Нямушка</h3>
                         <h5 class="cardСampaign">с курой</h5>
                         <p class="cardInfo">100 порций<br> 5 мышей в подарок<br> заказчик доволен</p>
                 </div> 
                 <div class="circle">
-                        <p class='amount'>5</p>
-                        <p class="unit">кг</p>
+                            <p class='amount'>5</p>
+                            <p class="unit">кг</p>
                     </div>
             </div>
             </div>
@@ -92,6 +92,6 @@
     </div>
     </main>
 
-    <script src="scripts/main.js"></script>
+    <script src="./build/scripts/main.js"></script>
 </body>
 </html>
